--- a/client/src/components/Forms/Forms.css
+++ b/client/src/components/Forms/Forms.css
@@ -2,7 +2,7 @@
   display: flex;
   background-color: rgba(0, 0, 0, 0.85);
   text-align: center;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   position: absolute;
   left: 0;
@@ -16,8 +16,8 @@
   opacity: 0;
 }
 
-.loginForm {
-  border: 2px solid white;
+.userForm {
+  background-color: #e2dad8;
   margin: 15vh auto;
   font-size: 22px;
   width: 35%;
