--- a/client/src/components/LoginForm/Login.css
+++ b/client/src/components/LoginForm/Login.css
@@ -1,27 +1,27 @@
 .popUpVisible {
   display: flex;
-  background-color: rgba(0, 0, 0, 0.85);
   text-align: center;
-  width: 100vw;
-  height: 100vh;
+  margin-left: 40%;
+  margin-top: 40%;
+  width: 300px;
+  height: 400px;
   position: absolute;
   left: 0;
   top: 0;
   transition: opacity 0.8s;
 }
-
 .popUpHidden {
   position: absolute;
   top: -100%;
   opacity: 0;
 }
-
 .loginForm {
-  border: 2px solid white;
+  background-color:#E2DAD8;
+  border: 2px solid black;
   margin: 15vh auto;
   font-size: 22px;
-  width: 35%;
-  height: 60vh;
+  width: 300px;
+  height: 400px;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
@@ -29,7 +29,6 @@
   position: relative;
   border-radius: 15px;
 }
-
 .userName,
 .password {
   display: flex;
@@ -46,9 +45,18 @@
   width: 30px;
   height: 30px;
 }
-
 .closeForm img {
   width: 30px;
   height: 30px;
   cursor: pointer;
+}
+.img-logIn img{
+  width: 70px;
+  height: 70px;
+}
+@media screen and (max-width: 800px) {
+  .popUpVisible {
+    
+  }
+
 }
