--- a/client/src/screens/Landing/Landing.css
+++ b/client/src/screens/Landing/Landing.css
@@ -3,6 +3,7 @@
 }
 
 .img img {
+    padding-left: 12%;
     float: center;
     width: 65%;
     margin-top: -110px;
@@ -11,22 +12,23 @@ a{
  text-decoration: none;
  font-family: 'Aref Ruqaa', serif;
  font-size: 40px;
+
 }
  .description {
     font-family: 'Changa', sans-serif;
     font-size: 28px;
 
 }
+h3{
+    text-align: center;
+    margin-top: 0.5px;
+
+}
 
 .categories img {
     float: center;
     width: 16.33%;
-    border: none;
-    color: black;
-    padding: 16px 32px;
-    text-align: center;
-    font-size: 16px;
-    margin: 4px 2px;
+    margin-left: 45%;
     transition: 0.3s;
 }
 
@@ -34,13 +36,17 @@ a{
     opacity: 0.6
 }
 
+
+
 @media screen and (max-width: 800px) {
     .img img {
         width: 40%;
         margin-top: 2px;
+        padding-left: 28%;
     }
     .categories img {
         width: 14%;
+
     }
     a{
         font-size: 12px;
