--- a/client/src/components/Forms/Forms.css
+++ b/client/src/components/Forms/Forms.css
@@ -1,7 +1,6 @@
 .popUpVisible {
   display: flex;
   text-align: center;
-  background-color: rgba(0, 0, 0, 0.5);
   width: 100%;
   height: 100vh;
   position: absolute;
@@ -16,7 +15,7 @@
 }
 
 .userForm {
-  background-color: #FFF7E9;
+  background-color: #e2dad8;
   margin: 15vh auto;
   font-size: 22px;
   width: 300px;
@@ -49,12 +48,7 @@
   height: 30px;
   cursor: pointer;
 }
-/* .img-logIn img {
+.img-logIn img {
   width: 70px;
   height: 70px;
-} */
-.icon-LogIn{
-  width: 70px;
-  height: 70px;
-
 }
