--- a/client/src/screens/Guests/Guests.css
+++ b/client/src/screens/Guests/Guests.css
@@ -46,15 +46,31 @@
   height: 100%;
   text-align: right;
 }
-/* .Name{
+.Name {
   display: flex;
   flex-direction: row-reverse;
   justify-content: space-between; 
 }
+#status
+{
+  background-color: #e2dad8;
+
+} 
+#FemaleMale{
+  background-color: #e2dad8;
+
+}
+.select{
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: space-between; 
+
+
+}
 .Delet-Button{
   width: 50px;
   height: 50px;
-} */
+  background-color: #e2dad8;}
 ul {
   margin: 0;
   padding: 0;
