It will be displayed as a form that the user fills.gives the user the ability to add and show the guests-list.that lets the user manage his/her list via grouping by families. Home page button.

--- a/client/src/screens/Guests/Guests.css
+++ b/client/src/screens/Guests/Guests.css
@@ -51,13 +51,15 @@
   flex-direction: row-reverse;
   justify-content: space-between; 
 }
-#status
+.status 
 {
   background-color: #e2dad8;
+  width: 50px;
 
 } 
-#FemaleMale{
+.FemaleMale{
   background-color: #e2dad8;
+  width: 50px;
 
 }
 .select{
@@ -157,4 +159,5 @@ ul li.checked::before {
     height: 100%;
     text-align: right;
   }
+
 }
