--- a/client/src/screens/Guests/Guests.css
+++ b/client/src/screens/Guests/Guests.css
@@ -1,5 +1,28 @@
  .table{
      width: 80%;
      height: 80%;
-     margin-left: 200px;     
+     margin-left: 15%;
+     
+ }
+
+ .cardImage{
+    margin-left: 50%;
+    width: 150px;
+     height: 150px;
+ }
+
+ @media screen and (max-width: 800px) {
+    .table{
+        width: 100%;
+        height: 80%;
+        margin-left: 1%;
+        
+    }
+   
+    .cardImage{
+       margin-left: 33.3%;
+       width: 150px;
+        height: 150px;
+    }
+
  }
