--- a/client/src/components/Forms/Forms.css
+++ b/client/src/components/Forms/Forms.css
@@ -27,7 +27,6 @@
   align-items: center;
   position: relative;
   border-radius: 15px;
-
 }
 .userName,
 .password {
@@ -50,7 +49,7 @@
   height: 30px;
   cursor: pointer;
 }
-.img-logIn img {
+.icon-logIn img {
   width: 70px;
   height: 70px;
 }
